# ha-green-button

./: .gitignore  .pre-commit-config.yaml  DATA_HANDLING_EXPLANATION.md  GREEN_BUTTON_COMPONENT_DESCRIPTION.md  README.md  WORKAROUND_EXPLANATION.md  flake.nix  hacs.json  pyproject.toml  renovate.json  requirements_test.txt
.github/workflows/: constraints.txt  linting.yaml  release.yaml  tests.yaml
custom_components/green_button/: __init__.py  config_flow.py  configs.py  const.py  coordinator.py  manifest.json  model.py  sensor.py  services.py  services.yaml  statistics.py  xml_storage.py
custom_components/green_button/parsers/: espi.py
custom_components/green_button/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_configs.py  test_coordinator.py  test_espi_parser.py  test_model.py  test_statistics_metadata.py
